--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "lottery-prize",
-  "version": "1.1.2",
+  "version": "1.1.4",
   "description": "name of prize must be continuous number and start from 1（like:1.png, 2.png)",
   "main": "./dist/prize.js",
   "scripts": {
+    "dev": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "haoyanyu",
@@ -12,8 +13,8 @@
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "babel-loader": "^8.0.6",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^4.4.1",
+    "webpack-cli": "^3.1.1"
   },
   "dependencies": {
     "lodash": "^4.17.15"
